bug: fix ol align

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,12 +16,6 @@ input, textarea, keygen, select, button {
   font-family: "Roboto", "Helvetica", "Segoe UI", "Arial", "sans-serif", "Microsoft JhengHei", "Heiti TC";
 }
 
-ol {
-  padding-left: 10%;
-  padding-right: 10%;
-  width: 80%;
-}
-
 h2 {
   font-size: 2rem;
 }
@@ -66,6 +60,15 @@ a {
   }
 }
 
+.item-list {
+  padding-left: 10%;
+  padding-right: 10%;
+  width: 80%;
+  li + li {
+    margin-top: 0.8rem;
+  }
+}
+
 .text-left {
   text-align: left;
 }
@@ -76,6 +79,10 @@ a {
 
 .text-right {
   text-align: right;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 @media (max-width: 576px) {
